# 2024_I_AV_SW_MAIN_CODE_RPI

./: .gitignore  .gitmodules  CMakeLists.txt  DEV_SETUP.md  Dockerfile  Flight_plan.json  Makefile  README.md  configure.cc  docker-compose.yml  drone_config.json  example_task.cc  log.txt  logging.cc  logging.h  main.cc  rocket.service  task.cc  task.h  toolchain-rpi64.cmake
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  example_task.cc  example_task.h  main.cc
casadi_arm64/: copy_casadi.sh  install_casadi.sh
casadi_arm64/CoinIpopt/install/include/coin-or/: IpoptConfig.h
casadi_arm64/CoinIpopt/install/lib/: libcoinasl.la  libcoinhsl.la  libcoinhsl.so.2  libcoinmumps.la  libcoinmumps.so.3.0.9  libipopt.so.3.14.17  libipoptamplinterface.la  libipoptamplinterface.so.3.14.17  libsipopt.so.3.14.17
casadi_arm64/CoinIpopt/install/lib/pkgconfig/: coinasl.pc  coinhsl.pc  coinmumps.pc  ipopt.pc  ipoptamplinterface.pc
casadi_arm64/casadi/install/include/casadi/: config.h
casadi_arm64/casadi/install/lib/: libcasadi_conic_nlpsol.so.3.7  libcasadi_conic_qrqp.so.3.7  libcasadi_integrator_idas.so.3.7  libcasadi_interpolant_linear.so.3.7  libcasadi_linsol_csparse.so.3.7  libcasadi_linsol_lsqr.so.3.7  libcasadi_linsol_qr.so.3.7  libcasadi_linsol_symbolicqr.so.3.7  libcasadi_nlpsol_qrsqp.so.3.7  libcasadi_nlpsol_sqpmethod.so.3.7
casadi_arm64/casadi/install/lib/cmake/casadi/: casadi-config-version.cmake  casadi-targets-release.cmake  casadi-targets.cmake
casadi_arm64/casadi/install/lib/pkgconfig/: casadi.pc
com_client/: CM4UART.cc  CM4UART.h  CMakeLists.txt  Client.cc  UART.cc  UART.h
com_client/inc/: CM4UART.h  CM4UART2.h  Client.h  Payload.h  UART.h  UART2.h  UART3.h
com_client/src/: CM4UART.cc  CM4UART2.cc  Payload.cc  UART.cc  UART2.cc  UART3.cc
com_client/tests/: CMakeLists.txt  test.cc  test2.cc  test3.cc  test_receiving.cc  test_sending.cc
external_rpi_sysroot/lib/aarch64-linux-gnu/: ld-linux-aarch64.so.1  libc.so.6  libc_malloc_debug.so.0  libmetis.so.5.1.0  libresolv.so.2  rpicam_app.so.1.5.2
external_rpi_sysroot/lib/aarch64-linux-gnu/cmake/openblas/: OpenBLASConfig.cmake
external_rpi_sysroot/lib/aarch64-linux-gnu/libcamera/: ipa_rkisp1.so.sign  ipa_rpi_pisp.so.sign  ipa_rpi_vc4.so.sign  raspberrypi_ipa_proxy  soft_ipa_proxy
external_rpi_sysroot/lib/aarch64-linux-gnu/openblas-pthread/: libblas.so.3
external_rpi_sysroot/lib/aarch64-linux-gnu/openblas-pthread/pkgconfig/: blas-openblas.pc  lapack-openblas.pc
external_rpi_sysroot/lib/aarch64-linux-gnu/pkgconfig/: lapack-netlib.pc  protobuf-lite.pc
external_rpi_sysroot/usr/include/aarch64-linux-gnu/: cblas-openblas.h  f77blas.h  openblas_config.h
external_rpi_sysroot/usr/include/aarch64-linux-gnu/openblas-pthread/: openblas_config.h
external_rpi_sysroot/usr/lib/aarch64-linux-gnu/: libcurl-gnutls.so.4.8.0  libdrm.so.2.123.0  libopenblas.so.0  libprotoc.so.32.0.12
external_rpi_sysroot/usr/lib/aarch64-linux-gnu/libcamera/: ipa_soft_simple.so.sign  ipa_vimc.so.sign  rkisp1_ipa_proxy  vimc_ipa_proxy
external_rpi_sysroot/usr/lib/aarch64-linux-gnu/pkgconfig/: blas-netlib.pc  openblas.pc  protobuf.pc
external_rpi_sysroot/usr/local/lib/: libcasadi_conic_ipqp.so.3.7  libcasadi_conic_nlpsol.so.3.7  libcasadi_conic_qrqp.so.3.7  libcasadi_importer_shell.so.3.7  libcasadi_integrator_collocation.so.3.7  libcasadi_integrator_cvodes.so.3.7  libcasadi_integrator_idas.so.3.7  libcasadi_integrator_rk.so.3.7  libcasadi_interpolant_bspline.so.3.7  libcasadi_interpolant_linear.so.3.7  libcasadi_linsol_csparse.so.3.7  libcasadi_linsol_csparsecholesky.so.3.7  libcasadi_linsol_ldl.so.3.7  libcasadi_linsol_lsqr.so.3.7  libcasadi_linsol_ma27.so.3.7  libcasadi_linsol_qr.so.3.7  libcasadi_linsol_symbolicqr.so.3.7  libcasadi_linsol_tridiag.so.3.7  libcasadi_nlpsol_feasiblesqpmethod.so.3.7  libcasadi_nlpsol_ipopt.so.3.7  libcasadi_nlpsol_qrsqp.so.3.7  libcasadi_nlpsol_scpgen.so.3.7  libcasadi_nlpsol_sqpmethod.so.3.7  libcasadi_rootfinder_fast_newton.so.3.7  libcasadi_rootfinder_kinsol.so.3.7  libcasadi_rootfinder_newton.so.3.7  libcasadi_rootfinder_nlpsol.so.3.7  libcasadi_sundials_common.so.3.7  libcasadi_xmlfile_tinyxml.so.3.7
external_rpi_sysroot/usr/local/lib/pkgconfig/: casadi.pc
json/: CMakeLists.txt
scripts/: analyse_delays.py  build.sh  install_casadi.sh  install_dependencies.sh  install_protobuf.sh  install_protobuff.sh  rocket.service  update_sysroot.sh
src/: CMakeLists.txt  com_control_thread.cc  com_control_thread.h  com_thread.cc  com_thread.h  configure.cc  configure.h  control_interface.cc  control_interface.h  control_thread.cc  control_thread.h  cyclic_thread_state_dependant.h  drone_interface.cc  drone_interface.h  drone_thread.cc  drone_thread.h  example_task.h  fcf_module_thread.cc  fcf_module_thread.h  flight_plan_module.cc  flight_plan_module.cpp  fms_states.h  fms_thread.cc  fms_thread.h  fsm_states.cc  fsm_states.h  fsm_thread.cc  fsm_thread.h  god.cc  god.h  guidance_interface.cc  guidance_interface.h  log_interface.cc  log_interface.h  log_thread.cc  log_thread.h  main.cc  priorities.h  shared_memory.h  syscalls.cc  (+1 more)
src/gnc/: control_driver.cc  control_driver.h  control_thread.cc  control_thread.h  guidance_thread.cc  guidance_thread.h  navigation_thread.cc  navigation_thread.h
tests/: CMakeLists.txt  cpu_cores.cc  priority.cc
(+3 files in other folders)
